Fix the ntrips_replaced_mode value.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -537,7 +537,7 @@
                               (metric === 'ntrips_under80') ||
                               (metric === 'ntrips_commute_mode_confirm') ||
                               (metric === 'distance_mode') ||
-                              (metric === `ntrips_${global_mode_studied}_replaced`)||
+                              (metric === `ntrips_${global_mode_studied}_replaced_mode`)||
                               (metric === `distance_${global_mode_studied}_replaced_mode`))
                               ? metric : "";
 
