--- a/frontend/index.html
+++ b/frontend/index.html
@@ -395,13 +395,11 @@
       return study_name;
     }
 
-    let global_mode_studied;
     $(function () {
       $(document).ready(function () {
         // Simple solution to program/study plots dropdown; load the config and corresponding metrics.html
         const STUDY_CONFIG = _getStudyName(window.location);
         $.getJSON('https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/configs/' + STUDY_CONFIG + '.nrel-op.json', function (data) {
-          global_mode_studied = data.intro.mode_studied;
           // get units
           const dist_units = (data.display_config.use_imperial) ? "miles" : "kilometers";
           console.log("Units for display are", data.display_config.use_imperial, dist_units);
@@ -536,9 +534,7 @@
                               (metric === 'ntrips_purpose') ||
                               (metric === 'ntrips_under80') ||
                               (metric === 'ntrips_commute_mode_confirm') ||
-                              (metric === 'distance_mode') ||
-                              (metric === `ntrips_${global_mode_studied}_replaced_mode`)||
-                              (metric === `distance_${global_mode_studied}_replaced_mode`))
+                              (metric === 'distance_mode'))
                               ? metric : "";
 
         const jsonData = { metric, dateVal, program, metricLabel, dateLabel, programLabel, sizex, sizey };
