--- a/frontend/metrics_program_withoutEnergyMetrics.html
+++ b/frontend/metrics_program_withoutEnergyMetrics.html
@@ -3,7 +3,7 @@
 <option value="ntrips_total" data-sizex="10" data-sizey="4">Number of trips</option>
 <option value="ntrips_under80" data-sizex="10" data-sizey="4">Number of trips (under 80th of total trips)</option>
 <option value="ntrips_commute_mode_confirm" data-sizex="10" data-sizey="4">Number of trips based on commute</option>
-<option value="distance_mode" data-sizex="10" data-sizey="4">Distance covered by mode</option>
+<option value="distance_mode" data-sizex="10" data-sizey="4">Distance ( in ${data.display_config.use_imperial} ) covered by mode</option>
 <option value="ntrips_purpose" data-sizex="10" data-sizey="4">Number of trips based on purpose</option>
 <option value="average_miles_mode_confirm" data-sizex="6" data-sizey="4">Average trip length (${data.display_config.use_imperial})</option>
 <option value="average_miles_sensed_mode" data-sizex="6" data-sizey="4">Average trip length (${data.display_config.use_imperial}) (sensed)</option>
