--- a/frontend/index.html
+++ b/frontend/index.html
@@ -530,16 +530,10 @@
         const htmlFile = "plots/" + metric + "_" + dateVal + program + ".html";
         const altTextFile = "plots/" + metric + "_" + dateVal + program + ".txt";
         const altText = loadFile(altTextFile);
-        let selectedMetric = ((metric === 'ntrips_total') ||
-                              (metric === 'ntrips_purpose') ||
-                              (metric === 'ntrips_under80') ||
-                              (metric === 'ntrips_commute_mode_confirm') ||
-                              (metric === 'total_trip_length'))
-                              ? metric : "";
-
+        const isStackedMetric = ['ntrips_total', 'ntrips_purpose', 'ntrips_under80', 'ntrips_commute_mode_confirm', 'total_trip_length'].includes(metric);
         const jsonData = { metric, dateVal, program, metricLabel, dateLabel, programLabel, sizex, sizey };
 
-        if (selectedMetric === metric){
+        if (isStackedMetric){
           const nw = ["<li data-min-sizex='2' data-min-sizey='2'>"
             + labelText
             + "&nbsp;"
