--- a/frontend/metrics_program_withoutEnergyMetrics.html
+++ b/frontend/metrics_program_withoutEnergyMetrics.html
@@ -1,7 +1,7 @@
 <!-- Replica of metrics_program.html without energy options-->
 <!-- Generic -->
 <option value="ntrips_total" data-sizex="10" data-sizey="4">Number of trips</option>
-<option value="ntrips_under80" data-sizex="10" data-sizey="4">Number of trips (under 80th of total trips)</option>
+<option value="ntrips_under80" data-sizex="10" data-sizey="4">Number of trips (under 80th percentile of total trips)</option>
 <option value="ntrips_commute_mode_confirm" data-sizex="10" data-sizey="4">Number of trips based on commute</option>
 <option value="total_trip_length" data-sizex="10" data-sizey="4">Total Trip length ( in ${data.display_config.use_imperial} ) covered by mode</option>
 <option value="ntrips_purpose" data-sizex="10" data-sizey="4">Number of trips based on purpose</option>
