Added metrics dropdown for 1.Number of total trips by replaced mode. 2. Total Trip length by replaced mode. 3. Total trip length for land based modes.

--- a/frontend/metrics_study.html
+++ b/frontend/metrics_study.html
@@ -3,6 +3,7 @@
 <option value="ntrips_under80" data-sizex="10" data-sizey="4">Number of trips (under 80th percentile of total trips)</option>
 <option value="ntrips_commute_mode_confirm" data-sizex="10" data-sizey="4">Number of commute trips</option>
 <option value="total_trip_length" data-sizex="10" data-sizey="4">Total trip length (${data.display_config.use_imperial}) covered by mode</option>
+<option value="total_trip_length_land" data-sizex="10" data-sizey="4">Total trip length (${data.display_config.use_imperial}) covered by mode in land</option>
 <option value="ntrips_purpose" data-sizex="10" data-sizey="4">Number of trips by purpose</option>
 <option value="average_miles_mode_confirm" data-sizex="6" data-sizey="4">Average trip length (${data.display_config.use_imperial})</option>
 <option value="average_miles_sensed_mode" data-sizex="6" data-sizey="4">Average trip length (${data.display_config.use_imperial}) (sensed)</option>
