Update the metrics options to list three options for replaced mode.

--- a/frontend/metrics_program.html
+++ b/frontend/metrics_program.html
@@ -17,8 +17,9 @@
 <option value="ts_users" data-sizex="8" data-sizey="2">Timeseries of active users</option>
 <option value="ts_all_modes" data-sizex="8" data-sizey="2">Timeseries of all mode shares</option>
 <!-- Mode Specific -->
-<option value="ntrips_total_replaced_mode" data-sizex="10" data-sizey="4">${data.intro.mode_studied}` specific number of trips by replaced mode</option>
-<option value="total_trip_length_replaced_mode" data-sizex="10" data-sizey="4">${data.intro.mode_studied}` specific trip length (${data.display_config.use_imperial}) by replaced mode</option>
+<option value="ntrips_${data.intro.mode_studied}_total" data-sizex="10" data-sizey="4">`${data.intro.mode_studied}` specific number of trips by replaced mode</option>
+<option value="ntrips_${data.intro.mode_studied}_purpose" data-sizex="10" data-sizey="4">`${data.intro.mode_studied}` specific number of trips by purpose</option>
+<option value="total_trip_length_${data.intro.mode_studied}_replaced_mode" data-sizex="10" data-sizey="4">`${data.intro.mode_studied}` specific trip length (${data.display_config.use_imperial}) by replaced mode</option>
 <option value="average_miles_replaced_mode" data-sizex="6" data-sizey="4">Average ${data.display_config.use_imperial} for each replaced mode (w/Other)</option>
 <option value="ntrips_${data.intro.mode_studied}_per_day" data-sizex="6" data-sizey="4">`${data.intro.mode_studied}` specific Trip frequency</option>
 <option value="ntrips_${data.intro.mode_studied}_per_weekday" data-sizex="6" data-sizey="4">`${data.intro.mode_studied}` specific Trips per weekday</option>
