Update the value from total_trip_ to total_trip_length_ to match the file name.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -531,7 +531,10 @@
         const htmlFile = "plots/" + metric + "_" + dateVal + program + ".html";
         const altTextFile = "plots/" + metric + "_" + dateVal + program + ".txt";
         const altText = loadFile(altTextFile);
-        const isStackedMetric = ['ntrips_total', 'ntrips_purpose', 'ntrips_under80', 'ntrips_commute_mode_confirm', 'total_trip_length', 'total_trip_length_land',`ntrips_${mode_studied}_total`,`ntrips_${mode_studied}_purpose`, `total_trip_${mode_studied}_length_replaced_mode`].includes(metric);
+        const isStackedMetric = ['ntrips_total', 'ntrips_purpose', 'ntrips_under80', 'ntrips_commute_mode_confirm',
+                                'total_trip_length', 'total_trip_length_land',`ntrips_${mode_studied}_total`,
+                                `ntrips_${mode_studied}_purpose`,`total_trip_length_${mode_studied}_replaced_mode`]
+                                .includes(metric);
         const jsonData = { metric, dateVal, program, metricLabel, dateLabel, programLabel, sizex, sizey };
 
         if (isStackedMetric){
