--- a/frontend/index.html
+++ b/frontend/index.html
@@ -435,7 +435,7 @@
           dynamic_labels = data.label_options
           surveys = data.survey_info.surveys 
           console.log(data.survey_info['trip-labels'])
-          if (data.survey_info['trip-labels'] === 'ENKETO') {
+          if (data.survey_info['trip-labels'] === 'ENKETO') { //CASE: SURVEYS
             survey_list = Object.keys(surveys)
             survey_list = survey_list.filter(name => name !== 'UserProfileSurvey')
 
@@ -468,7 +468,7 @@
             });         
           
           }
-          else if (data.intro.program_or_study == 'program') {
+          else if (data.intro.program_or_study == 'program') { //CASE: PROGRAM
             // Note: We're disabling energy metrics on public dashboard when dynamic labels are available.
             // TODO: Remove the if (data.label_options) in future when energy computation is handled properly.
             if (dynamic_labels) {
