Update all Stacked Bar Chart metrics with expansion button option.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -395,6 +395,7 @@
       return study_name;
     }
 
+    var mode_studied
     $(function () {
       $(document).ready(function () {
         // Simple solution to program/study plots dropdown; load the config and corresponding metrics.html
@@ -403,6 +404,7 @@
           // get units
           const dist_units = (data.display_config.use_imperial) ? "miles" : "kilometers";
           console.log("Units for display are", data.display_config.use_imperial, dist_units);
+          mode_studied = data.intro.mode_studied
           // Load list of plots corresponding to study/program
           dynamic_labels = data.label_options
           if (data.intro.program_or_study == 'program') {
@@ -530,7 +532,12 @@
         const htmlFile = "plots/" + metric + "_" + dateVal + program + ".html";
         const altTextFile = "plots/" + metric + "_" + dateVal + program + ".txt";
         const altText = loadFile(altTextFile);
-        const isStackedMetric = ['ntrips_total', 'ntrips_purpose', 'ntrips_under80', 'ntrips_commute_mode_confirm', 'total_trip_length'].includes(metric);
+        console.log(metric)
+        console.log(`ntrips_${mode_studied}_total`)
+        const isStackedMetric = ['ntrips_total', 'ntrips_purpose', 'ntrips_under80', 'ntrips_commute_mode_confirm',
+                                 'total_trip_length', 'total_trip_length_land',`ntrips_${mode_studied}_total`,
+                                 `ntrips_${mode_studied}_purpose`,`total_trip_length_${mode_studied}_replaced_mode`]
+                                 .includes(metric);
         const jsonData = { metric, dateVal, program, metricLabel, dateLabel, programLabel, sizex, sizey };
 
         if (isStackedMetric){
