Scale down the stacked bar chart to maintain aspect ratio.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -547,7 +547,7 @@
             + "<button class= 'btn btn_default addInfo' style='color: black; background-color: none; border-color: white;' data-info='" + encodeURIComponent(JSON.stringify(jsonData))+ "'> More Info </button>"
             + "&nbsp;"
             + "<button class='remove'>x</button>"
-            + "<img src='" + imgFile + "' alt='" + altText + "' width=90% height=90%>"
+            + "<img src='" + imgFile + "' alt='" + altText + "' style='width: 99%; height: 90%; object-fit: scale-down;'>"
             + "</li>",
             sizex, sizey];
           gridster.add_widget.apply(gridster, nw);
