Update changes for ntrips_mode_of_interest_purpose metric.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -427,6 +427,7 @@
                 "ntrips_total",
                 "total_trip_length",
                 "ntrips_purpose",
+                `ntrips_${data.intro.mode_studied}_purpose`,
                 `ntrips_${data.intro.mode_studied}_per_weekday`,
                 `sketch_CO2impact_${data.intro.mode_studied}`
               ]);
